--- a/Joulukalenteri.css
+++ b/Joulukalenteri.css
@@ -158,7 +158,7 @@
     position: relative;
     width: 2.75em;
     height: 2.75em;
-    background: url(http://myy.haaga-helia.fi/~a1704538/images/1);
+    /*background: url(http://myy.haaga-helia.fi/~a1704538/images/2);*/
     margin: 25% auto 0 auto;
     font-size: 2em;
     font-weight: bold;
@@ -202,7 +202,9 @@
 /* Luukku asetukset loppuu */
 
 body {
-    background-image: url(http://myy.haaga-helia.fi/~a1704538/images/christmasbase.jpg)
+    background-image: url(http://myy.haaga-helia.fi/~a1704538/images/christmasbase.jpg);
+    margin:auto;
+
 }
 
 table {
