--- a/Joulukalenteri.css
+++ b/Joulukalenteri.css
@@ -66,7 +66,9 @@
 }
 
 .article {
-    display: inline-block;
+    position: relative;
+    top: 125px;
+    display: inline-flex;
     width: 9em;
     height: 9em;
     margin: 0.5em;
@@ -75,9 +77,12 @@
 }
 
 .box {
-    position: absolute;
-    background: url(http://myy.haaga-helia.fi/~a1704538/images/luukku5.jpg);
-    background: url(http://myy.haaga-helia.fi/~a1704538/images/luukku5.jpg);
+    position: fixed;
+    top: -8px;
+    
+    left: -8px;
+    background: url(http://myy.haaga-helia.fi/~a1704538/images/luukku1.jpg);
+    background: url(http://myy.haaga-helia.fi/~a1704538/images/luukku1.jpg);
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
     -webkit-transform-origin: 0;
@@ -89,13 +94,20 @@
     cursor: pointer;
     -webkit-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
+     display: inline-block;
+    width: 9em;
+    height: 9em;
+    margin: 0.5em;
+    -webkit-perspective: 850px;
+    perspective: 850px;
+    
 }
 
 .box h2 {
-    position: absolute;
+    position: fixed;
     width: 3em;
     height: 3em;
-    top: 50%;
+    top: 75px;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
@@ -110,8 +122,8 @@
 }
 
 .article:hover .box {
-    background-image: url(http://myy.haaga-helia.fi/~a1704538/images/luukku5.jpg);
-    background: url(http://myy.haaga-helia.fi/~a1704538/images/luukku5.jpg);
+    background-image: url(http://myy.haaga-helia.fi/~a1704538/images/luukku1.jpg);
+    background: url(http://myy.haaga-helia.fi/~a1704538/images/luukku1.jpg);
     -webkit-transform: rotateY(-97deg);
     transform: rotateY(-97deg);
     -webkit-perspective-origin: 0;
@@ -134,8 +146,8 @@
 }
 
 .present {
-    position: absolute;
-    top: 0;
+    position: fixed;
+    
     left: 0;
     background: transparent;
     box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.15), inset 0 0 30px 20px rgba(0, 0, 0, 0.4);
@@ -146,14 +158,17 @@
     position: relative;
     width: 2.75em;
     height: 2.75em;
-    background: #a94b61;
+    background: url(http://myy.haaga-helia.fi/~a1704538/images/frostivus);
     margin: 25% auto 0 auto;
     font-size: 2em;
     font-weight: bold;
     line-height: 2.75em;
     color: white;
     border-radius: 50%;
+    background-size: cover;
 }
+
+
 
 .bauble:after {
     content: "";
@@ -187,5 +202,12 @@
 /* Luukku asetukset loppuu */
 
 body {
-    background-image: url(http://myy.haaga-helia.fi/~a1704538/images/christmasbase.jpg)
+    background-image: url(http://myy.haaga-helia.fi/~a1704538/images/christmasbase.jpg);
+    margin:auto;
+
+}
+
+table {
+    position: fixed;
+    top: 50px;
 }
