--- a/Joulukalenteri.css
+++ b/Joulukalenteri.css
@@ -202,11 +202,27 @@
 /* Luukku asetukset loppuu */
 
 body {
-    background-image: url(http://myy.haaga-helia.fi/~a1704538/images/christmasbase.jpg);
-    margin:auto;
-
+background-image: url(http://myy.haaga-helia.fi/~a1704538/images/christmasbase.jpg);
 }
-
+/*
+#bg {
+  position: fixed; 
+  top: -50%; 
+  left: -50%; 
+  width: 200%; 
+  height: 200%;
+}
+#bg img {
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  right: 0; 
+  bottom: 0; 
+  margin: auto; 
+  min-width: 50%;
+  min-height: 50%;
+}
+*/
 table {
     position: fixed;
     top: 50px;
